small alignment fix

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -2,7 +2,7 @@
   padding-top: 210px;
 
   .about-container {
-    padding: 0;
+    //padding: 0;
 
     .top-box {
       display: flex;
