--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -46,7 +46,6 @@ ul {
 .sidebar {
   display: flex;
   justify-content: flex-start;
-  padding: 0;
   p {
     font-size: 22px;
   }
